@startuml
namespace edu.kit.scc.dem.tuhl {
    namespace dataaccess {
      class edu.kit.scc.dem.tuhl.dataaccess.AccessService {
          + AccessService()
          + addAnnotation()
          + deleteAnnotation()
          + getAllManuscripts()
          + getAllManuscriptsModifiedAfter()
          + getRawAnnotationJson()
          + getRawManuscriptJson()
          + getRawManuscriptXml()
          + getRawPageJson()
          + updateAnnotation()
      }

      class edu.kit.scc.dem.tuhl.dataaccess.AnnotationStoreAccessService {
          + addAnnotation()
          + deleteAnnotation()
          + getAllAnnotations()
          + getAnnotationById()
          + getAnnotationsModifiedAfter()
          + updateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.dataaccess.IAccessService {
          {abstract} + addAnnotation()
          {abstract} + deleteAnnotation()
          {abstract} + getAllManuscripts()
          {abstract} + getAllManuscriptsModifiedAfter()
          {abstract} + getRawAnnotationJson()
          {abstract} + getRawManuscriptJson()
          {abstract} + getRawManuscriptXml()
          {abstract} + getRawPageJson()
          {abstract} + updateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.dataaccess.IAnnotationStoreAccessService {
          {abstract} + addAnnotation()
          {abstract} + deleteAnnotation()
          {abstract} + getAllAnnotations()
          {abstract} + getAnnotationById()
          {abstract} + getAnnotationsModifiedAfter()
          {abstract} + updateAnnotation()
      }

      interface edu.kit.scc.dem.tuhl.dataaccess.IRepositoryAccessService {
          {abstract} + getAllManuscripts()
          {abstract} + getAllPagesForManuscriptId()
          {abstract} + getManuscriptById()
          {abstract} + getManuscriptsModifiedAfter()
          {abstract} + getPageById()
          {abstract} + getPageImageByPageId()
          {abstract} + getXmlByManuscriptId()
      }

      class edu.kit.scc.dem.tuhl.dataaccess.RepositoryAccessService {
          + getAllManuscripts()
          + getAllPagesForManuscriptId()
          + getManuscriptById()
          + getManuscriptsModifiedAfter()
          + getPageById()
          + getPageImageByPageId()
          + getXmlByManuscriptId()
      }
    }
  }
  

  edu.kit.scc.dem.tuhl.dataaccess.AccessService ..|> edu.kit.scc.dem.tuhl.dataaccess.IAccessService
  edu.kit.scc.dem.tuhl.dataaccess.AccessService o-- edu.kit.scc.dem.tuhl.dataaccess.IAnnotationStoreAccessService : annotationStoreAccessService
  edu.kit.scc.dem.tuhl.dataaccess.AccessService o-- edu.kit.scc.dem.tuhl.dataaccess.IRepositoryAccessService : repositoryAccessService
  edu.kit.scc.dem.tuhl.dataaccess.AnnotationStoreAccessService ..|> edu.kit.scc.dem.tuhl.dataaccess.IAnnotationStoreAccessService
  edu.kit.scc.dem.tuhl.dataaccess.RepositoryAccessService ..|> edu.kit.scc.dem.tuhl.dataaccess.IRepositoryAccessService
@enduml
